# hrLib

./: CMakeLists.txt  LICENSE  README.md
include/hrlib/error_handling/: result.hpp
include/hrlib/integer_sequence_util/: integer_sequence_util.hpp
include/hrlib/static_graph/: static_graph.hpp
include/hrlib/type_traits/: best_match_in_set.hpp  identity.hpp  is_match_template.hpp  type_list_util.hpp  type_traits.hpp
test/: CMakeLists.txt
test/error_handling/: CMakeLists.txt  result.cpp
test/hrlib/: CMakeLists.txt
test/hrlib/error_handling/: CMakeLists.txt
test/hrlib/integer_sequence_util/: CMakeLists.txt  integer_sequence_util.cpp
test/hrlib/static_graph/: CMakeLists.txt  static_graph.cpp
test/hrlib/type_traits/: CMakeLists.txt  type_list_util.cpp
test/integer_sequence_util/: integer_sequence_util.cpp
test/type_traits/: CMakeLists.txt  best_match_in_set.cpp  is_detected.cpp  is_match_template.cpp
type_traits/: is_detected.hpp
